# Networks_projet

./: README.md  etude_des_reseaux.ipynb  etude_du_reseau_complet.ipynb  pyproject.toml
data/: dataset_UbiComp2016_UserProfile_NYC.txt  dataset_UbiComp2016_UserProfile_TKY.txt  dataset_UbiComp2016_readme.txt  tokyo.geo.json  tokyo_center.geo.json  tokyo_wards.geo.json
notebooks/: correlation_geo.ipynb  etude_des_reseaux.ipynb  etude_du_reseau_complet.ipynb  geographie_venture.ipynb  geographie_venues.ipynb  newton_model.ipynb
src/: geography_utils.py  network_utils.py  tokyo_map.py
