[project]
name = "networks-projet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "esda>=2.9.0",
    "geopandas>=1.1.3",
    "libpysal>=4.14.1",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
]
